web/system/log/log-2017-07-31
[2017-07-31 10:34:20.400] [ERROR] dateFileLog - C:\NB\tm.FGEMS\bizServer\biz\auto\AlarmOutputLower.js:41
                     CatchTime >?
                                ^
SyntaxError: Unexpected token ?
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.foundFile (C:\NB\yujiang.Foil.Node\src\yjApp.js:192:7)
[2017-07-31 11:22:58.210] [ERROR] dateFileLog - ReferenceError: iniFormaterrMonth is not defined
    at success (C:\NB\tm.FGEMS\bizServer\biz\green\getGreenChartYear.{m}.js:51:28)
    at Object.exports.safeSuccess (C:\NB\yujiang.Foil.Node\src\yjError.js:98:13)
    at Object.exports.handleResult (C:\NB\yujiang.Foil.Node\src\yjError.js:154:12)
    at Query.<anonymous> (C:\NB\yujiang.Foil.Node\src\yjDBService.engine.mysql.js:202:38)
    at bound (domain.js:280:14)
    at Query.runBound [as _callback] (domain.js:293:12)
    at Query.Sequence.end (C:\NB\node_modules\mysql\lib\protocol\sequences\Sequence.js:96:24)
    at Query._handleFinalResultPacket (C:\NB\node_modules\mysql\lib\protocol\sequences\Query.js:143:8)
    at Query.EofPacket (C:\NB\node_modules\mysql\lib\protocol\sequences\Query.js:127:8)
    at Protocol._parsePacket (C:\NB\node_modules\mysql\lib\protocol\Protocol.js:271:23)
[2017-07-31 11:22:58.256] [ERROR] dateFileLog - Error: iniFormaterrMonth is not defined
    at Request.<anonymous> (C:\NB\yujiang.Foil.Node\src\yjREST.engine.remote.restler.js:43:33)
    at emitTwo (events.js:106:13)
    at Request.emit (events.js:191:7)
    at Request._fireSuccess (C:\NB\node_modules\restler\lib\restler.js:220:12)
    at C:\NB\node_modules\restler\lib\restler.js:158:20
    at IncomingMessage.auto (C:\NB\node_modules\restler\lib\restler.js:394:7)
    at Request._encode (C:\NB\node_modules\restler\lib\restler.js:195:29)
    at C:\NB\node_modules\restler\lib\restler.js:154:16
    at Request._decode (C:\NB\node_modules\restler\lib\restler.js:170:7)
    at IncomingMessage.<anonymous> (C:\NB\node_modules\restler\lib\restler.js:147:14)
[2017-07-31 11:24:05.337] [ERROR] dateFileLog - ReferenceError: temp is not defined
    at success (C:\NB\tm.FGEMS\bizServer\biz\green\getGreenChartYear.{m}.js:52:18)
    at Object.exports.safeSuccess (C:\NB\yujiang.Foil.Node\src\yjError.js:98:13)
    at Object.exports.handleResult (C:\NB\yujiang.Foil.Node\src\yjError.js:154:12)
    at Query.<anonymous> (C:\NB\yujiang.Foil.Node\src\yjDBService.engine.mysql.js:202:38)
    at bound (domain.js:280:14)
    at Query.runBound [as _callback] (domain.js:293:12)
    at Query.Sequence.end (C:\NB\node_modules\mysql\lib\protocol\sequences\Sequence.js:96:24)
    at Query._handleFinalResultPacket (C:\NB\node_modules\mysql\lib\protocol\sequences\Query.js:143:8)
    at Query.EofPacket (C:\NB\node_modules\mysql\lib\protocol\sequences\Query.js:127:8)
    at Protocol._parsePacket (C:\NB\node_modules\mysql\lib\protocol\Protocol.js:271:23)
[2017-07-31 11:24:05.357] [ERROR] dateFileLog - Error: temp is not defined
    at Request.<anonymous> (C:\NB\yujiang.Foil.Node\src\yjREST.engine.remote.restler.js:43:33)
    at emitTwo (events.js:106:13)
    at Request.emit (events.js:191:7)
    at Request._fireSuccess (C:\NB\node_modules\restler\lib\restler.js:220:12)
    at C:\NB\node_modules\restler\lib\restler.js:158:20
    at IncomingMessage.auto (C:\NB\node_modules\restler\lib\restler.js:394:7)
    at Request._encode (C:\NB\node_modules\restler\lib\restler.js:195:29)
    at C:\NB\node_modules\restler\lib\restler.js:154:16
    at Request._decode (C:\NB\node_modules\restler\lib\restler.js:170:7)
    at IncomingMessage.<anonymous> (C:\NB\node_modules\restler\lib\restler.js:147:14)
[2017-07-31 14:27:39.225] [ERROR] dateFileLog - { Error: C:\NB\tm.FGEMS\webServer\app\green\showGreen.{v}.ejs:1
 >> 1| <% layout('./green.ejs') -%> 
    2| <% block('Green_Chart',partial("./Green_Chart.ejs")) -%> 
    3| <% block('Green_Statistic_Green',partial("./Green_Statistic_Green.ejs")) -%> 
    4| <% block('Green_Chart_Illumation',partial("./Green_Chart_Illumation.ejs")) -%> 

Could not find partial ./Green_Chart.ejs
    at Object.partial (C:\NB\node_modules\ejs-locals\index.js:311:11)
    at eval (eval at <anonymous> (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:237:14), <anonymous>:30:108)
    at eval (eval at <anonymous> (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:237:14), <anonymous>:30:1617)
    at C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:250:15
    at Object.exports.render (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:288:13)
    at Object.exports.renderFile (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:318:20)
    at View.module.exports [as engine] (C:\NB\node_modules\ejs-locals\index.js:85:7)
    at View.render (C:\NB\node_modules\express\lib\view.js:126:8)
    at tryRender (C:\NB\node_modules\express\lib\application.js:639:10)
    at EventEmitter.render (C:\NB\node_modules\express\lib\application.js:591:3)
  path: 'C:\\NB\\tm.FGEMS\\webServer\\app\\green\\showGreen.{v}.ejs' }
[2017-07-31 14:27:43.769] [ERROR] dateFileLog - { Error: C:\NB\tm.FGEMS\webServer\app\green\showGreen.{v}.ejs:1
 >> 1| <% layout('./green.ejs') -%> 
    2| <% block('Green_Chart',partial("./Green_Chart.ejs")) -%> 
    3| <% block('Green_Statistic_Green',partial("./Green_Statistic_Green.ejs")) -%> 
    4| <% block('Green_Chart_Illumation',partial("./Green_Chart_Illumation.ejs")) -%> 

Could not find partial ./Green_Chart.ejs
    at Object.partial (C:\NB\node_modules\ejs-locals\index.js:311:11)
    at eval (eval at <anonymous> (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:237:14), <anonymous>:30:108)
    at eval (eval at <anonymous> (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:237:14), <anonymous>:30:1617)
    at C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:250:15
    at Object.exports.render (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:288:13)
    at Object.exports.renderFile (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:318:20)
    at View.module.exports [as engine] (C:\NB\node_modules\ejs-locals\index.js:85:7)
    at View.render (C:\NB\node_modules\express\lib\view.js:126:8)
    at tryRender (C:\NB\node_modules\express\lib\application.js:639:10)
    at EventEmitter.render (C:\NB\node_modules\express\lib\application.js:591:3)
  path: 'C:\\NB\\tm.FGEMS\\webServer\\app\\green\\showGreen.{v}.ejs' }
[2017-07-31 14:28:20.706] [ERROR] dateFileLog - { Error: C:\NB\tm.FGEMS\webServer\app\green\showGreen.{v}.ejs:1
 >> 1| <% layout('./green.ejs') -%> 
    2| <% block('Green_Chart',partial("./Green_Chart.ejs")) -%> 
    3| <% block('Green_Statistic_Green',partial("./Green_Statistic_Green.ejs")) -%> 
    4| <% block('Green_Chart_Illumation',partial("./Green_Chart_Illumation.ejs")) -%> 

Could not find partial ./Green_Chart.ejs
    at Object.partial (C:\NB\node_modules\ejs-locals\index.js:311:11)
    at eval (eval at <anonymous> (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:237:14), <anonymous>:30:108)
    at eval (eval at <anonymous> (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:237:14), <anonymous>:30:1617)
    at C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:250:15
    at Object.exports.render (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:288:13)
    at Object.exports.renderFile (C:\NB\node_modules\ejs-locals\node_modules\ejs\lib\ejs.js:318:20)
    at View.module.exports [as engine] (C:\NB\node_modules\ejs-locals\index.js:85:7)
    at View.render (C:\NB\node_modules\express\lib\view.js:126:8)
    at tryRender (C:\NB\node_modules\express\lib\application.js:639:10)
    at EventEmitter.render (C:\NB\node_modules\express\lib\application.js:591:3)
  path: 'C:\\NB\\tm.FGEMS\\webServer\\app\\green\\showGreen.{v}.ejs' }
